<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/electricviolet"
    tools:context=".Authentication">


    <TextView
        android:id="@+id/sjp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="14dp"
        android:lineSpacingExtra="8sp"
        android:text="Shri Jayachamarajendra (Govt.) Polytechnic"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="sans-serif"
        tools:text="Shri Jayachamarajendra (Govt.) Polytechnic" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/round_text_box"
        android:ems="10"
        android:hint="  Email-Id"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwdField"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="264dp"
        android:background="@drawable/round_text_box"
        android:ems="10"
        android:hint="  Password"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="171dp"
        android:background="@drawable/round_text_box"
        android:onClick="login"
        android:text="Login" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/round_text_box"
        android:onClick="signUp"
        android:text="Register" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"

        android:layout_marginBottom="39dp"
        android:visibility="invisible" />


</android.widget.RelativeLayout>