...
        android:ems="10"
        android:hint="Email-Id"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/emailid"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_text_box"
...
